Presentaciones de las clases 5 y 6.

--- a/Nivel1-A/Documentos/Videos/clase3.tex
+++ b/Nivel1-A/Documentos/Videos/clase3.tex
@@ -24,10 +24,18 @@
 
 \begin{frame}{\secname : \subsecname}
   \begin{block}{Imagen}
-    En general vamos a hablar de una imagen, o un raster, como el conjunto de bandas y sus metadatos.
+    En general vamos a hablar de una imagen, o un raster, como el conjunto de bandas.
   \end{block}
 \end{frame}
 %--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{block}{Metadatos}
+    PONER UNA DEFINICION DE METADATOS.
+  \end{block}
+\end{frame}
+%--- Next Frame ---%
+
 
 \subsection{Resolución espectral y radiométrica}
 
