--- a/Nivel1-A/Documentos/Videos/preamble.tex
+++ b/Nivel1-A/Documentos/Videos/preamble.tex
@@ -15,6 +15,8 @@
 % Texto mas lindo para los pie de figura
 \usepackage[margin=10pt,font=small,labelfont=bf, labelsep=endash]{caption}
 
+\usepackage{smartdiagram}
+\usesmartdiagramlibrary{additions}
 
 
 % Citas
