--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -1,11 +1,20 @@
 \section{Introducción a la teledetección}
 
+%--- Next Frame ---%
+\subsection{Definición sensores remotos}
+\begin{frame}{\secname : \subsecname}
+\begin{block}{Sensores remotos}
+ Capacidad de obtener información de un objeto o fenómeno sin estar en contacto directo con él \footfullcite{Jensen 2008}.
+\end{block}
+
+\end{frame}
+
 \subsection{Tipos de sensores y órbitas}
 
 \begin{frame}{\secname : \subsecname}
 
 \begin{block}{Sensores y plataformas}
-  Cuando hablamos de una imagen satelital podemos describirla dando dos partes:
+  Cuando hablamos adquisición de imágenes satelitales hablamos de dos componentes fundamentales:
   \begin{itemize}
     \item El \emph{Sensor} que toma la imagen.
     \item La \emph{Plataforma} que transporta al sensor
@@ -13,8 +22,10 @@
 \end{block}
 
 \end{frame}
-%--- Next Frame ---%
 
+
+
+%--- Next Frame ---%
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
@@ -181,7 +192,7 @@
 
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Definición}
-        Es la capacidad del sensor de distinguir cambios en el tiempo.
+        Es el tiempo de revisita.
     \end{block}
 \end{frame}
 %--- Next Frame ---%
