actualizacion presentacion clase1

--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -49,7 +49,8 @@
 \begin{frame}{\secname : \subsecname}
   Algunos ejeplos de plataformas y sensores pasivos son
   \begin{itemize}
-    \item \only<1>{\emph{Landsat 5}} \only<2>{Landsat 5 - \emph{TM}} \only<3-> {Landsat 5 - TM}
+    \item 
+    \item<1->{Landsat 5 - TM}
     \item<3-> Landsat 7 - ETM
     \item<4-> Landsat 8 - OLI,TIRS
     \item<5-> TERRA - MODIS
