--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -49,7 +49,6 @@
 \begin{frame}{\secname : \subsecname}
   Algunos ejeplos de plataformas y sensores pasivos son
   \begin{itemize}
-    \item 
     \item<1->{Landsat 5 - TM}
     \item<3-> Landsat 7 - ETM
     \item<4-> Landsat 8 - OLI,TIRS
@@ -63,7 +62,7 @@
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
-\only<1>{Para clasificar a las plataformas nos vamos a centrar en la órbita que utilizan.}
+\only<1>{Tipos de órbitas.}
 \only<2->{
 \begin{block}{Clasificación de órbitas}
    Una órbita es el camino que recorre un cuerpo en el espacio. Las dos más importantes para teledetección son:
@@ -140,9 +139,18 @@
 
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Definición}
-        Es la capacidad del sensor de distinguir objetos en el terreno.
+        Es la capacidad del sensor de distinguir objetos en el terreno.%ver definición
     \end{block}
 \end{frame}
+%--- Next Frame ---%
+\begin{frame}{\secname : \subsecname}
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[width=0.5\textwidth]{fig:pixel.png}
+        \caption{Formación de un  pixel.}
+    \end{figure}
+\end{frame}
+
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
