--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -1,4 +1,4 @@
-\section{Combinaciones espectrales}
+\section{Fundamentos físicos}
 
 
 \subsection{Radiación electromagnética}
@@ -30,6 +30,35 @@
     \label{}
   \end{figure}
 \end{frame}
+%--- Next Frame ---%
+
+
+\begin{frame}
+  \frametitle{Conociendo el espectro}
+  \begin{exampleblock}{Ejemplo:}
+    \begin{itemize}
+      \item Visible
+      \begin{itemize}
+        \item<1> $[\lambda=450-495 nm]$ {\color{blue} azul}
+        \item<1> $[\lambda=495-570 nm]$ {\color{green} verde}
+        \item<1> $[\lambda=620-750 nm]$ {\color{red} rojo}
+      \end{itemize}
+      \item Infrarrojo
+      \begin{itemize}
+        \item<2> $[\lambda=0.75-1.4\mu m]$ Cercano
+        \item<2> $[\lambda=1.4-3\mu m]$ Onda corta
+        \item<2> $[\lambda=8-15\mu m]$ Termico
+      \end{itemize}
+      \item Microondas - SAR
+      \begin{itemize}
+        \item<3> $[\nu = 26.5 -18.0 GHz]$ Banda K
+        \item<3> $[\nu = 12.5 - 8.0 GHz]$ Banda X
+        \item<3> $[\nu = 2.0 - 1.0 GHz] $ Banda L
+      \end{itemize}
+    \end{itemize}
+  \end{exampleblock}
+\end{frame}
+
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
