--- a/Nivel1-A/Documentos/Videos/presentacion.tex
+++ b/Nivel1-A/Documentos/Videos/presentacion.tex
@@ -1,5 +1,5 @@
 \documentclass[aspectratio=169]{beamer}
-%\usepackage{pgfpages}
+%\usepackage[•]{•}sepackage{pgfpages}
 %\pgfpagesuselayout{4 on 1}[a4paper,border shrink=5mm]
 \usetheme[block=fill,progressbar=frametitle,numbering=none]{metropolis}
 \usepackage{animate}
