--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -118,8 +118,8 @@
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
-    \begin{block}{Definición}
-        Usaremos habitualmente la definición alternativa de reflectancia
+    \begin{block}{Reflectancia}
+        Usaremos la siguiente definición:
         \begin{equation}
           \rho_\lambda = \frac{\pi L_{r,\lambda}}{E_{0,\lambda} \cos \theta_{sol}}
         \end{equation}
