--- a/Nivel1-A/Documentos/Videos/clase3.tex
+++ b/Nivel1-A/Documentos/Videos/clase3.tex
@@ -9,14 +9,15 @@
     \label{}
   \end{figure}
 \end{frame}
+% modificar el video, no me cierra nada, es bastante confuso, o mejorar o cambiar.
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
 \begin{block}{Píxel}
-  Un píxel es el mínimo elemento de una imagen. Cada píxel tiene un único valor numérico y no es posible separar su composición.
+  Un píxel es el mínimo elemento de una imagen. Cada píxel tiene un único valor numérico.
 \end{block}\pause
 \begin{block}{Banda}
-  Una banda es un agrupamiento de píxeles en dos dimensiones. Una banda puede estar asociada a una longitud de ona específica o a una combinación matemática de estas últimas.
+  Una banda es un agrupamiento de píxeles en dos dimensiones. Una banda puede estar asociada a una longitud de onda específica o a una operación matemática.
 \end{block}
 \end{frame}
 %--- Next Frame ---%
@@ -29,15 +30,24 @@
 \end{frame}
 %--- Next Frame ---%
 
+\subsection{Resolución espectral y radiométrica}
+
 \begin{frame}{\secname : \subsecname}
-  \begin{block}{Metadatos}
-    PONER UNA DEFINICION DE METADATOS.
+  \begin{block}{Radiometría}
+    Resolución radiométrica
   \end{block}
 \end{frame}
 %--- Next Frame ---%
 
+\begin{frame}{\secname : \subsecname}
+  \begin{block}{8 bits}
+   \begin{equation}
+            2^8 = 0-255
+        \end{equation}
+  \end{block}
+\end{frame} 
 
-\subsection{Resolución espectral y radiométrica}
+%--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
@@ -47,6 +57,17 @@
     \label{}
   \end{figure}
 \end{frame}
+%--- Next Frame ---%
+
+
+\begin{frame}{\secname : \subsecname}
+  \begin{block}{4 bits}
+   \begin{equation}
+            2^4 = 0-15
+        \end{equation}
+  \end{block}
+\end{frame} 
+
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
@@ -59,6 +80,17 @@
 \end{frame}
 %--- Next Frame ---%
 
+
+\begin{frame}{\secname : \subsecname}
+  \begin{block}{2 bits}
+   \begin{equation}
+            2^2 = 0-3
+        \end{equation}
+  \end{block}
+\end{frame} 
+
+%--- Next Frame ---%
+
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
@@ -67,6 +99,20 @@
     \label{}
   \end{figure}
 \end{frame}
+%--- Next Frame ---%
+
+
+
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{block}{1 bits}
+   \begin{equation}
+            2^2 = 0-1
+        \end{equation}
+  \end{block}
+\end{frame} 
+
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
@@ -78,6 +124,8 @@
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
+
+
 
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Definición}
