--- a/Nivel1-A/Documentos/Videos/clase5.tex
+++ b/Nivel1-A/Documentos/Videos/clase5.tex
@@ -3,7 +3,7 @@
 \subsection{Clasificación}
 \begin{frame}{\secname : \subsecname}
 \begin{block}{Concepto de clasificación}
-  Clasificar es convertir una imagen espectral en una imagen con clases de información.
+  Clasificar es convertir valores espectrales a clases de información.
 \end{block}
 \end{frame}
 %--- Next Frame ---%
@@ -14,7 +14,7 @@
 \end{block}
 \pause
 \begin{block}{Clase espectral}
-  Es un conjunto de píxeles espectralmente similares.
+  Es un conjunto de píxeles con valores similares.
 \end{block}
 \end{frame}
 %--- Next Frame ---%
