--- a/Nivel1-A/Documentos/Videos/clase4.tex
+++ b/Nivel1-A/Documentos/Videos/clase4.tex
@@ -27,7 +27,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:firmasalto.png}
-    \caption{Salto en la firma espectral de la vegetación.}
+    \caption{Salto $\rho_{nir}$ - $\rho_{red}$}
     \label{}
   \end{figure}
 \end{frame}
@@ -71,23 +71,11 @@
         \begin{itemize}[<+->]
             \item Suele ajustar mejor a las variaciones de reflectancia del
                 suelo.
-            \item Es difícil conocer el valor de $L$ a priori.
+            \item Es difícil conocer el valor de $L$ a priori. \begin{equation}
+        L=0.5
+    \end{equation}
         \end{itemize}
     \end{block}
-\end{frame}
-
-\begin{frame}{\secname : \subsecname}
-    Existen distintas corrientes sobre como calcular el valor de L
-    \begin{equation}
-        L=0.5
-    \end{equation}\pause\
-    \begin{equation}
-        L = 1-2 a NDVI \times WDVI
-    \end{equation}\pause\
-    donde $a\sim 1.6$
-    \begin{equation}
-        WDVI = \rho_n -\gamma \rho_r
-    \end{equation}
 \end{frame}
 
 \begin{frame}{\secname : \subsecname}
